# VMat

./: .gitignore  CMakeLists.txt  README.md
VMat/: arithmetic.h  geometry.h  quaternion.h
include/VMat/: arithmetic.h  geometry.h  grid.hpp  numeric.h  quaternion.h  transformation.h  vmattype.h
test/: CMakeLists.txt  test_bound.cpp  test_geometry.cpp  test_vector.cpp
